Adapting to changed name in the backing form POJO

--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -270,7 +270,7 @@
                           <label for="filter-participants-age" class="col-sm-3 control-label">Teilnehmeralter</label>
                           <div class="col-sm-9" id="filter-participants-age">
                               <div class="checkbox" style="margin-bottom: 15px;">
-                                  <label><input type="checkbox" id="filter-participants-age-type" name="participants-age-filter-type" th:field="*{participantsAgeFilterType}" />Nach Mindestteilnehmeralter filtern</label>
+                                  <label><input type="checkbox" id="filter-participants-age-type" name="participants-age-filter-type" th:field="*{participantsAgeFilter}" />Nach Mindestteilnehmeralter filtern</label>
                               </div>
                               <div id="filter-participants-age-container" class="hide-initially">
                                   <div class="input-group">
